@@ -61,6 +61,7 @@ Stefan Ondrejicka <ondrej@idata.sk>
 Stephen Early <steve@greenend.org.uk>
 Takehiro Suzuki <takehiro@coral.ocn.ne.jp>
 Thierry DELHAISE <thierry.delhaise@delhaise.com>
+Thierry Laronde <thierry.laronde@polynum.com>
 Thomas Schweikle <tschweikle@fiducia.de>
 Torsten Duwe <duwe@caldera.de>
 VaX#n8 <vax@linkdead.paranoia.com>
