@@ -17,6 +17,11 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
+# Replaced by the configure script.
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+sbindir=@sbindir@
+
 # Initialize some variables.
 grub_shell=${sbindir}/grub
 progname="grub-md5-crypt"
